#pragma once
void reformat_key(void);

void reformat_summary(const char *summary);

void reformat_summary_send_token(void);

void reformat_operator(void);

void reformat_fee(void);

void reformat_memo(void);

void reformat_amount_balance(void);

void reformat_amount_transfer(void);

void reformat_amount_burn(void);

void reformat_amount_mint(void);

void reformat_token_tranfer(void);

void reformat_token_associate(void);

void reformat_token_mint(void);

void reformat_token_burn(void);

void reformat_verify_account();

void reformat_sender_account(void);

void reformat_recipient_account(void);

void reformat_tokens_account_sender(void);

void reformat_tokens_account_recipient(void);
